# nostalgic-glide-demo

./: 86box.cfg  CMakeLists.txt  README.md  bitmap.c  bitmap.h  bumpmain.c  bumpmain.h  bumpobj.c  bumpobj.h  bumptri.c  bumptri.h  clock.c  clock.h  copytlib.h  cube386.lnk  cubedemo.lnk  cubegl.lnk  envmap.c  envmap.h  low.c  main.c  makefile  makefile.386  makefile.gl  math3d.c  math3d.h  prepare.bat  ptpoly2.c  ptpoly2.h  raster.c  raster.h  rsglide.c  sys.c  sys.h  template.c  template.h  texglide.c  texman.c  texman.h  texture.c  (+3 more)
assets/: brick.pcx  browntil.pcx  floor.pcx
assets/envmaps/: envmap.3df  envmap.pcx
assets/textures/: process.sh  texus.bat
dummy/: glide.h
